# triangle

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
include/camera/: Camera.h
include/core/: Input.h  Window.h
include/graphics/: Texture.h
include/scene/: Object.h
shaders/: basic.frag  basic.vert
src/: assets.rs  camera.rs  engine.rs  main.cpp  main.rs
src/animation/: Animation.cpp
src/camera/: Camera.cpp
src/core/: Input.cpp  Window.cpp
src/game/: demo_game.rs  mod.rs
src/graphics/: Mesh.cpp  Texture.cpp
src/renderer/: Renderer.cpp
src/scene/: Object.cpp  Scene.cpp
